--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "next": "^16.1.3",
+    "next-intl": "^4.8.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -19,7 +19,8 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "dev": "next dev",
