fix: remove react-scripts and add .npmrc for dependency resolution

--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
     "next": "^16.1.3",
     "next-intl": "^4.8.2",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -27,12 +23,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
