--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@playwright/test": "^1.58.2",
     "next": "^16.1.3",
     "next-intl": "^4.8.2",
     "react": "^19.2.3",
